test/expected/explain_rrgi.out
explain register int &x
                     ^
22: error: reference not supported in C
